[gd_scene load_steps=9 format=2]

[ext_resource path="res://gear.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://AnimationPlayer/AnimationPlayer.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Modulate"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Offset"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 400, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Position"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 136, 240 ), Vector2( 436, 240 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Texture"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Z Index"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 136, 240 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 223, 240 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Modulate = SubResource( 1 )
anims/Offset = SubResource( 2 )
anims/Position = SubResource( 3 )
anims/Texture = SubResource( 4 )
"anims/Z Index" = SubResource( 5 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 48.0
margin_top = 362.0
margin_right = 475.0
margin_bottom = 382.0
custom_constants/hseparation = 30
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GridContainer"]
margin_right = 72.0
margin_bottom = 20.0
text = "Modulate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="GridContainer"]
margin_left = 102.0
margin_right = 153.0
margin_bottom = 20.0
text = "Offset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="GridContainer"]
margin_left = 183.0
margin_right = 247.0
margin_bottom = 20.0
text = "Position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="GridContainer"]
margin_left = 277.0
margin_right = 337.0
margin_bottom = 20.0
text = "Texture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="GridContainer"]
margin_left = 367.0
margin_right = 427.0
margin_bottom = 20.0
text = "Z Index"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 49.0
margin_top = 461.0
margin_right = 121.0
margin_bottom = 481.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="."]
margin_left = 242.0
margin_top = 461.0
margin_right = 338.0
margin_bottom = 481.0
text = "Back To Main"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 456.0
margin_top = 435.0
margin_right = 496.0
margin_bottom = 449.0
text = "Offset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 457.0
margin_top = 481.0
margin_right = 509.0
margin_bottom = 495.0
text = "Position"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GridContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="GridContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
